// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DLS Proposals table component renders correctly 1`] = `
Object {
  "columns": Array [
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "title",
      "defaultSort": "asc",
      "disableSort": true,
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "investigations.title",
    },
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "name",
      "disableSort": true,
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "investigations.name",
    },
  ],
  "data": Array [
    Object {
      "doi": "doi 1",
      "endDate": "2019-06-11",
      "id": 1,
      "investigationInstruments": Array [
        Object {
          "id": 1,
          "instrument": Object {
            "id": 3,
            "name": "LARMOR",
          },
        },
      ],
      "name": "Test 1",
      "size": 1,
      "startDate": "2019-06-10",
      "summary": "foo bar",
      "title": "Test 1",
      "visitId": "1",
    },
  ],
  "loadMoreRows": [Function],
  "onSort": [Function],
  "sort": Object {
    "title": "asc",
  },
  "totalRowCount": 1,
}
`;

exports[`DLS Proposals table component renders title and name as links 1`] = `
Array [
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
    data-testid="dls-proposals-table-title"
    href="/browse/proposal/Test 1/investigation"
  >
    Test 1
  </a>,
]
`;

exports[`DLS Proposals table component renders title and name as links 2`] = `
Array [
  <a
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
    data-testid="dls-proposals-table-name"
    href="/browse/proposal/Test 1/investigation"
  >
    Test 1
  </a>,
]
`;
